--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </div>
                             <div>
                                 <button id="btn-submit" type="submit" class="submit-btn">Submit</button>
-                                <p class="action-left">3 try left</p>
+                                <p class="action-left">3 <span id="error-3time">try left</span></p>
                             </div>
                         </div>
                     </div>
